--- a/EFI/CLOVER/kexts/Other/RealtekRTL8111.kext/Contents/Info.plist
+++ b/EFI/CLOVER/kexts/Other/RealtekRTL8111.kext/Contents/Info.plist
@@ -3,21 +3,21 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>18A347e</string>
+	<string>16G1114</string>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
+	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>WhateverGreen</string>
+	<string>RealtekRTL8111</string>
 	<key>CFBundleIdentifier</key>
-	<string>as.vit9696.WhateverGreen</string>
+	<string>com.insanelymac.RealtekRTL8111</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>WhateverGreen</string>
+	<string>RealtekRTL8111</string>
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.2.1</string>
+	<string>2.2.2</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleSupportedPlatforms</key>
@@ -25,61 +25,75 @@
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.2.1</string>
+	<string>2.2.2</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>10L201y</string>
+	<string>8E3004b</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>18A326e</string>
+	<string>16E185</string>
 	<key>DTSDKName</key>
-	<string>macosx10.14</string>
+	<string>macosx10.12</string>
 	<key>DTXcode</key>
-	<string>1000</string>
+	<string>0833</string>
 	<key>DTXcodeBuild</key>
-	<string>10L201y</string>
+	<string>8E3004b</string>
 	<key>IOKitPersonalities</key>
 	<dict>
-		<key>as.vit9696.WhateverGreen</key>
+		<key>RTL8111 PCIe Adapter</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>as.vit9696.WhateverGreen</string>
+			<string>com.insanelymac.RealtekRTL8111</string>
+			<key>Driver_Version</key>
+			<string>2.2.2</string>
 			<key>IOClass</key>
-			<string>WhateverGreen</string>
-			<key>IOMatchCategory</key>
-			<string>WhateverGreen</string>
+			<string>RTL8111</string>
+			<key>IOPCIMatch</key>
+			<string>0x816810ec 0x81681186</string>
+			<key>IOProbeScore</key>
+			<integer>1000</integer>
 			<key>IOProviderClass</key>
-			<string>IOResources</string>
-			<key>IOResourceMatch</key>
-			<string>IOKit</string>
+			<string>IOPCIDevice</string>
+			<key>Model</key>
+			<string>RTL8111</string>
+			<key>Vendor</key>
+			<string>Realtek</string>
+			<key>disableASPM</key>
+			<true/>
+			<key>enableCSO6</key>
+			<true/>
+			<key>enableEEE</key>
+			<true/>
+			<key>enableTSO4</key>
+			<true/>
+			<key>enableTSO6</key>
+			<true/>
+			<key>intrMitigate</key>
+			<integer>53080</integer>
+			<key>rxPolling</key>
+			<true/>
 		</dict>
 	</dict>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2018 vit9696. All rights reserved.</string>
-	<key>OSBundleCompatibleVersion</key>
-	<string>1.0</string>
+	<string>Copyright © 2013 Laura Müller. All rights reserved.</string>
 	<key>OSBundleLibraries</key>
 	<dict>
-		<key>as.vit9696.Lilu</key>
-		<string>1.2.0</string>
+		<key>com.apple.iokit.IONetworkingFamily</key>
+		<string>1.5.0</string>
 		<key>com.apple.iokit.IOPCIFamily</key>
-		<string>1.0.0b1</string>
+		<string>1.7</string>
 		<key>com.apple.kpi.bsd</key>
-		<string>12.0.0</string>
-		<key>com.apple.kpi.dsep</key>
-		<string>12.0.0</string>
+		<string>8.10.0</string>
 		<key>com.apple.kpi.iokit</key>
-		<string>12.0.0</string>
+		<string>8.10.0</string>
 		<key>com.apple.kpi.libkern</key>
-		<string>12.0.0</string>
+		<string>8.10.0</string>
 		<key>com.apple.kpi.mach</key>
-		<string>12.0.0</string>
-		<key>com.apple.kpi.unsupported</key>
-		<string>12.0.0</string>
+		<string>8.10.0</string>
 	</dict>
 	<key>OSBundleRequired</key>
-	<string>Root</string>
+	<string>Network-Root</string>
 </dict>
 </plist>
