--- a/EFI/CLOVER/kexts/Other/AppleBacklightInjector.kext/Contents/Info.plist
+++ b/EFI/CLOVER/kexts/Other/AppleBacklightInjector.kext/Contents/Info.plist
@@ -30,12 +30,18 @@
 		<dict>
 			<key>ApplePanels</key>
 			<dict>
-				<key>F10Txxxx</key>
+				<key>F14Txxxx</key>
 				<data>ABEAAAA0AFIAcwCUAL4A+gE2AXIBxQIvArkDYAQaBQoGDgcQ</data>
-				<key>F11Txxxx</key>
+				<key>F15Txxxx</key>
 				<data>ABEAAAA2AFQAfQCyAPUBSQGxAisCuANZBBME7AXzBzQIrwrZ</data>
-				<key>F12Txxxx</key>
+				<key>F16Txxxx</key>
 				<data>ABEAAAAYACcAOgBSAHEAlgDEAPwBQAGTAfYCbgL+A6oEeAVs</data>
+				<key>F17Txxxx</key>
+				<data>ABEAAAAfADQATwBxAJsAzwEOAV0BuwIvArkDYAQpBR4GRAeh</data>
+				<key>F18Txxxx</key>
+				<data>ABEAAABTAIwA1QExAaICLgLYA64ErAXlB1kJHAs7DdAQ6hSZ</data>
+				<key>F24Txxxx</key>
+				<data>ABEAAQA0AFIAcwCUAL4A+gE2AXIBxQIvArkDYAQaBQoGDgcQ</data>
 			</dict>
 			<key>CFBundleIdentifier</key>
 			<string>com.apple.driver.AppleBacklight</string>
