--- a/EFI/CLOVER/config_installer.plist
+++ b/EFI/CLOVER/config_installer.plist
@@ -378,10 +378,8 @@
 			<key>#Kaby Lake-Comment</key>
 			<string>To avoid automatic Clover fake device-id (Skylake) injection</string>
 		</dict>
-		<key>IntelMaxValue</key>
-		<integer>2777</integer>
 		<key>SetIntelMaxBacklight</key>
-		<true/>
+		<false/>
 		<key>USB</key>
 		<dict>
 			<key>AddClockID</key>
