--- a/EFI/CLOVER/config_installer.plist
+++ b/EFI/CLOVER/config_installer.plist
@@ -447,7 +447,7 @@
 			<key>ATI</key>
 			<false/>
 			<key>Intel</key>
-			<true/>
+			<false/>
 			<key>NVidia</key>
 			<false/>
 		</dict>
@@ -624,15 +624,15 @@
 				<false/>
 				<key>Find</key>
 				<data>
-				SU9LaXQ=
+				SU9CdWZm
 				</data>
 				<key>InfoPlistPatch</key>
 				<true/>
 				<key>Name</key>
-				<string>IOBufferCopyController</string>
+				<string>com.apple.iokit.IOBufferCopyController</string>
 				<key>Replace</key>
 				<data>
-				SU9LaXM=
+				SU9CdWVl
 				</data>
 			</dict>
 		</array>
