小米8代游戏本增强版安装镜像配置文件1
- 安装第一阶段跳过IOBufferController的检测

--- a/EFI/CLOVER/config_first.plist
+++ b/EFI/CLOVER/config_first.plist
@@ -447,7 +447,7 @@
 			<key>ATI</key>
 			<false/>
 			<key>Intel</key>
-			<false/>
+			<true/>
 			<key>NVidia</key>
 			<false/>
 		</dict>
@@ -647,7 +647,7 @@
 	<key>SMBIOS</key>
 	<dict>
 		<key>ProductName</key>
-		<string>MacBookAir6,2</string>
+		<string>MacBookPro15,2</string>
 		<key>ProductName-Comment</key>
 		<string>Using Haswell MacBookAir6,2 until Clover has support for KabyLake identifiers</string>
 		<key>Trust</key>
