小米8代游戏本增强版安装镜像配置文件3
- 安装完成后正常使用的配置文件，驱动显卡

--- a/EFI/CLOVER/config.plist
+++ b/EFI/CLOVER/config.plist
@@ -338,6 +338,10 @@
 				<data>
 				CQCbPg==
 				</data>
+				<key>device-id</key>
+				<data>
+				mz4AAA==
+				</data>
 				<key>disable-external-gpu</key>
 				<data>
 				AQAAAA==
@@ -451,7 +455,7 @@
 			<key>ATI</key>
 			<false/>
 			<key>Intel</key>
-			<true/>
+			<false/>
 			<key>NVidia</key>
 			<false/>
 		</dict>
