--- a/EFI/CLOVER/kexts/Other/AppleBacklightInjector.kext/Contents/Info.plist
+++ b/EFI/CLOVER/kexts/Other/AppleBacklightInjector.kext/Contents/Info.plist
@@ -31,17 +31,40 @@
 			<key>ApplePanels</key>
 			<dict>
 				<key>F14Txxxx</key>
-				<data>ABEAAAA0AFIAcwCUAL4A+gE2AXIBxQIvArkDYAQaBQoGDgcQ</data>
+				<data>
+				ABEAAAA0AFIAcwCUAL4A+gE2AXIBxQIvArkDYAQaBQoG
+				DgcQ
+				</data>
 				<key>F15Txxxx</key>
-				<data>ABEAAAA2AFQAfQCyAPUBSQGxAisCuANZBBME7AXzBzQIrwrZ</data>
+				<data>
+				ABEAAAA2AFQAfQCyAPUBSQGxAisCuANZBBME7AXzBzQI
+				rwrZ
+				</data>
 				<key>F16Txxxx</key>
-				<data>ABEAAAAYACcAOgBSAHEAlgDEAPwBQAGTAfYCbgL+A6oEeAVs</data>
+				<data>
+				ABEAAAKPA1MEWgWhB64KPQ4UE3QaXiQYMalEWV52gxG2
+				x/97
+				</data>
 				<key>F17Txxxx</key>
-				<data>ABEAAAAfADQATwBxAJsAzwEOAV0BuwIvArkDYAQpBR4GRAeh</data>
+				<data>
+				ABEAAAAfADQATwBxAJsAzwEOAV0BuwIvArkDYAQpBR4G
+				RAeh
+				</data>
 				<key>F18Txxxx</key>
-				<data>ABEAAABTAIwA1QExAaICLgLYA64ErAXlB1kJHAs7DdAQ6hSZ</data>
+				<data>
+				ABEAAABTAIwA1QExAaICLgLYA64ErAXlB1kJHAs7DdAQ
+				6hSZ
+				</data>
+				<key>F19Txxxx</key>
+				<data>
+				ABEAAAKPA1MEWgWhB64KPQ4UE3QaXiQYMalEWV52gxG2
+				x/97
+				</data>
 				<key>F24Txxxx</key>
-				<data>ABEAAQA0AFIAcwCUAL4A+gE2AXIBxQIvArkDYAQaBQoGDgcQ</data>
+				<data>
+				ABEAAQA0AFIAcwCUAL4A+gE2AXIBxQIvArkDYAQaBQoG
+				DgcQ
+				</data>
 			</dict>
 			<key>CFBundleIdentifier</key>
 			<string>com.apple.driver.AppleBacklight</string>
